--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   color:white;
   font-family:Lato ;
   /* Full Page Background Receipe */
-  background: url('../images/Newport-Chris.jpg');
+  background: url('../images/Newport-Chris-small.jpg');
   background-size: cover;
   background-position: right;
   background-attachment: fixed;
@@ -12,7 +12,7 @@ body {
 
 .container {
   width: 600px;
-  margin: 40px;
+  margin: 35px;
   background: black;
   background: rgba(0,0,0,0.5);
   padding:15px;
@@ -23,18 +23,25 @@ body {
 
 h1 {
 	font-family:Rokkitt, serif;
-	font-size: 50px;
+	font-size: 60px;
 	margin-bottom: 0px;
 	margin-top:-20px;
+  text-shadow: 2px 2px 10px  rgba(0,0,0,.9);
 }
 
 h2{
-	margin-top:0px;
-	font-size: 30px;
+	margin-top:10px;
+	font-size: 35px;
+  text-shadow: 1px 1px 6px  rgba(0,0,0,.9);
 }
 
 a{
 	color:#BFE35B;
 	text-decoration: none;
 
+}
+
+p{
+  font-size:125%;
+  text-shadow: 0 0 3px  rgba(0,0,0,.9);
 }
