--- a/timeline.css
+++ b/timeline.css
@@ -4,8 +4,9 @@ html ,body {
 }
 
 img {
-	width:100px;
-	height:100px;
+	width:40px;
+	height:40px;
+	transition: all .5s ease-out;
 }
 
 .entry-details {
@@ -27,9 +28,31 @@ img {
 	box-shadow: 2px 2px  2px 2px rgba(150,150,150,.4);
 }
 
+
+.message-inner:hover .entry-details {
+	transition: max-height .2s ease-in;
+	max-height:500px;
+	visibility: visible;
+}
+
+.message-inner:hover  img{
+	transition: all .5s ease;
+	width:100px;
+	height:100px;
+}
+
+
 .qa-message-what {
 	color: rgb(150,150,150);
 }
+
+.entry-details {
+	visibility: hidden;
+	max-height:0;
+	transition: max-height .2s ease-out;
+
+}
+
 
 /*custom above this line */
 
@@ -110,8 +133,8 @@ display: table;
 background-color: green;
 }
 .message-item .message-head {
-border-bottom: 1px solid #eee;
-margin-bottom: 8px;
+/*border-bottom: 1px solid #eee;
+margin-bottom: 8px;*/
 padding-bottom: 8px;
 }
 .message-item .message-head .avatar {
