--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,7 +1,14 @@
 html ,body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: rgb(245,244,247);
+	font-size: 100%;
 }
+
+body{
+	width:100%;
+}
+
+
 
 img {
 	width:40px;
@@ -10,45 +17,40 @@ img {
 	transition-delay: .2s;
 }
 
-.entry-details {
-	/*text-align: left;*/
-}
 
-.qa-message-what {
-	/*text-align: left;*/
-}
-
-.mainContainer {
-	max-width: 600px;
+.container-fluid {
+	width: 90%;
+	max-width:600px;
 	margin: 0 auto;
-	padding: 20px 20px 20px 20px;
+	padding: 5px 5px 5px 5px;
+
 }
 
-.message-inner {
+.event-box {
 	margin-left:7px;
 	box-shadow: 2px 2px  2px 2px rgba(150,150,150,.4);
 }
 
 
-.message-inner:hover .entry-details {
+.event-box:hover .event-details {
 	transition: max-height .6s ease-in;
 	transition-delay: .1s;
 	max-height:150px;
 	/*visibility: visible;*/
 }
 
-.message-inner:hover  img{
+.event-box:hover  img{
 	transition: all .4s ease;
-	width:100px;
-	height:100px;
+	min-width:100px;
+	min-height:100px;
 }
 
 
-.qa-message-what {
+.event-location{
 	color: rgb(150,150,150);
 }
 
-.entry-details {
+.event-details {
 	/*visibility: hidden;*/
 	max-height:0;
 	transition: max-height .4s ease-out;
@@ -56,7 +58,7 @@ img {
 }
 
 .button-container {
-	margin: 40px;
+	margin: 5%;
 	margin-left: -16px;
 }
 
@@ -65,23 +67,21 @@ img {
 
 /*custom above this line */
 
-.container {
-	width : 100%;
-}
+ 
 
-.message-item {
+.event {
 margin-bottom: 25px;
 margin-left: 40px;
 position: relative;
 }
-.message-item .message-inner {
+.event .event-box {
 background: #fff;
 border: 1px solid #ddd;
 border-radius: 3px;
 padding: 10px;
 position: relative;
 }
-.message-item .message-inner:before {
+.event .event-box:before {
 border-right: 10px solid #ddd;
 border-style: solid;
 border-width: 10px;
@@ -95,7 +95,7 @@ top: 6px;
 width: 0px;
 /*background-color: red;*/
 }
-.message-item .message-inner:after {
+.event .event-box:after {
 border-right: 10px solid #fff;
 border-style: solid;
 border-width: 10px;
@@ -110,7 +110,7 @@ width: 10px;
 
 /*background-color: blue;*/
 }
-.message-item:before {
+.event:before {
 background: #fff;
 border-radius: 2px;
 bottom: -30px;
@@ -123,7 +123,7 @@ width: 3px;
 
 /*background-color: orange;*/
 }
-.message-item:after {
+.event:after {
 background: #fff;
 border: 2px solid #ccc;
 border-radius: 50%;
@@ -141,46 +141,16 @@ content: " ";
 display: table;
 background-color: green;
 }
-.message-item .message-head {
-/*border-bottom: 1px solid #eee;
-margin-bottom: 8px;*/
-padding-bottom: 8px;
-}
-.message-item .message-head .avatar {
+
+.event  .avatar {
 margin-right: 20px;
 }
-.message-item .message-head .user-detail {
+.event  .event-text {
 overflow: hidden;
 }
-.message-item .message-head .user-detail h5 {
-font-size: 16px;
+.event  .event-text h5 {
+font-size: 2rem;
+
 font-weight: bold;
 margin: 0;
-}
-.message-item .message-head .post-meta {
-float: left;
-padding: 0 15px 0 0;
-}
-.message-item .message-head .post-meta >div {
-color: #333;
-font-weight: bold;
-/*text-align: right;*/
-}
-.post-meta > div {
-color: #777;
-font-size: 12px;
-line-height: 22px;
-.message-item .message-head .post-meta >div {
-color: #333;
-font-weight: bold;
-/*text-align: right;*/
-}
-.post-meta > div {
-color: #777;
-font-size: 12px;
-line-height: 22px;
-}
-img {
- min-height: 40px;
- max-height: 40px;
 }
