--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@ body {
   padding-top:40px;
 }
 
+svg:hover #Fill-35 {
+  transition: all .2s ease-in;
+  /*transition-delay: .1s;*/
+  fill:green;
+  stroke:green;
+}
+
 .container {
   width: 600px;
   margin: 0 auto;
