--- a/css/freelancer2.css
+++ b/css/freelancer2.css
@@ -23,11 +23,7 @@
   box-shadow: 0px 0px 9px 4px rgba(0,0,0,.2);
 }
 
-.chris-head-circle:hover { 
-  transition: all 1s ease-in;
-  width: 110%
-  height 110%;
-}
+
 /*  flex-direction: column;
   justify-content: center;  
   align-items:  center;*/
@@ -82,19 +78,24 @@
    height:520px;
    width:720px  ;
    text-align:center;
-   
-
  }
 
  .item-details{
   font-size: 18px;
  }
 
+.blur {
+  filter: blur(1.5px);
+  -webkit-filter: blur(1.5px);
+}
+
  /*star color for about section*/
 hr.star-third:after {    
   background-color: #40445e;
   color: white;
 }
+
+
 
 /*-----------*/
 
