--- a/css/freelancer2.css
+++ b/css/freelancer2.css
@@ -66,7 +66,9 @@
   color: white; 
  red text-decoration: none;
 }
-.arsenal-link:hover  {
+
+/*hack to remove underline after clicking image*/
+a.arsenal-link:focus, a.arsenal-link:hover , a.arsenal-link{
   text-decoration: none;
 }
 
